--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jquery.ns-autogrow",
   "version": "1.1.7",
-  "description": "Automatically adjust textarea height based on user input. Non-sucking version.",
+  "description": "Automatically adjust textarea width/height based on user input. Non-sucking version.",
   "main": "dist/jquery.ns-autogrow.js",
   "keywords": [
     "autogrow",
